--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -255,6 +255,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       December Precipitation\n",
+      "count             1405.000000\n",
+      "mean                 0.216819\n",
+      "std                  0.541399\n",
+      "min                  0.000000\n",
+      "25%                  0.000000\n",
+      "50%                  0.030000\n",
+      "75%                  0.150000\n",
+      "max                  6.420000\n",
+      "       June Precipitation\n",
+      "count         1574.000000\n",
+      "mean             0.136360\n",
+      "std              0.335731\n",
+      "min              0.000000\n",
+      "25%              0.000000\n",
+      "50%              0.020000\n",
+      "75%              0.120000\n",
+      "max              4.430000\n"
+     ]
+    }
+   ],
+   "source": [
+    "precipitation_in_june = session.query(Measurement.date, Measurement.prcp).filter(extract('month', Measurement.date) == 6).all()\n",
+    "precipitation_in_june_list = [i.prcp for i in precipitation_in_june]\n",
+    "precipitation_in_june_df = pd.DataFrame(precipitation_in_june_list, columns=['June Precipitation'])\n",
+    "precipitation_in_december = session.query(Measurement.date, Measurement.prcp).filter(extract('month', Measurement.date) == 12).all()\n",
+    "precipitation_in_december_list = [i.prcp for i in precipitation_in_december]\n",
+    "precipitation_in_december_df = pd.DataFrame(precipitation_in_december_list, columns=['December Precipitation'])\n",
+    "print(precipitation_in_december_df.describe())\n",
+    "print(precipitation_in_june_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Station  June Precipitation\n",
+      "3  USC00516128            0.495748\n",
+      "6  USC00519281            0.151525\n",
+      "1  USC00513117            0.118248\n",
+      "2  USC00514830            0.114192\n",
+      "5  USC00518838            0.094615\n",
+      "4  USC00517948            0.057975\n",
+      "8  USC00519523            0.050044\n",
+      "7  USC00519397            0.022661\n",
+      "0  USC00511918            0.015157\n",
+      "       Station  December Precipitation\n",
+      "5  USC00518838                0.638182\n",
+      "3  USC00516128                0.507005\n",
+      "6  USC00519281                0.244931\n",
+      "1  USC00513117                0.203241\n",
+      "8  USC00519523                0.162010\n",
+      "2  USC00514830                0.154966\n",
+      "4  USC00517948                0.152727\n",
+      "0  USC00511918                0.138146\n",
+      "7  USC00519397                0.075314\n"
+     ]
+    }
+   ],
+   "source": [
+    "station_names = session.query(Measurement.station).distinct().all()\n",
+    "station_precipitation_june = session.query(Measurement.station, func.avg(Measurement.prcp)).filter(extract('month', Measurement.date) == 6).group_by(Measurement.station).all()\n",
+    "station_precipitation_june_df = pd.DataFrame(station_precipitation_june, columns=['Station', 'June Precipitation'])\n",
+    "station_precipitation_december = session.query(Measurement.station, func.avg(Measurement.prcp)).filter(extract('month', Measurement.date) == 12).group_by(Measurement.station).all()\n",
+    "station_precipitation_december_df = pd.DataFrame(station_precipitation_december, columns=['Station', 'December Precipitation'])\n",
+    "print(station_precipitation_june_df.sort_values(by=['June Precipitation'], ascending=False))\n",
+    "print(station_precipitation_december_df.sort_values(by=['December Precipitation'], ascending=False))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
